sc/source/core/tool/formularesult.cxx
@@ -268,6 +268,8 @@ bool ScFormulaResult::IsEmptyDisplayedAsString() const
 bool ScFormulaResult::IsValue() const
 {
     formula::StackVar sv = GetCellResultType();
+    if( sv == formula::svHybridValueCell )
+        return true;
     return sv == formula::svDouble || sv == formula::svError || sv == formula::svEmptyCell;
 }
 
@@ -331,6 +333,8 @@ double ScFormulaResult::GetDouble() const
             switch (mpToken->GetType())
             {
                 case formula::svHybridCell:
+                case formula::svHybridValueCell:
+                    return mpToken->GetDouble();
                     return mpToken->GetDouble();
                 case formula::svMatrixCell:
                     {
@@ -359,6 +363,7 @@ const String & ScFormulaResult::GetString() const
         {
             case formula::svString:
             case formula::svHybridCell:
+            case formula::svHybridValueCell:
                 return mpToken->GetString();
             case formula::svMatrixCell:
                 {
@@ -382,7 +387,7 @@ ScConstMatrixRef ScFormulaResult::GetMatrix() const
     return NULL;
 }
 
-const String & ScFormulaResult::GetHybridFormula() const
+const OUString& ScFormulaResult::GetHybridFormula() const
 {
     if (GetType() == formula::svHybridCell)
     {
@@ -390,7 +395,7 @@ const String & ScFormulaResult::GetHybridFormula() const
         if (p)
             return p->GetFormula();
     }
-    return EMPTY_STRING;
+    return EMPTY_OUSTRING;
 }
 
 void ScFormulaResult::SetHybridDouble( double f )
@@ -439,6 +444,16 @@ void ScFormulaResult::SetHybridFormula( const String & rFormula )
     if (mbToken && mpToken)
         mpToken->DecRef();
     mpToken = new ScHybridCellToken( f, aStr, rFormula);
+    mpToken->IncRef();
+    mbToken = true;
+}
+
+void ScFormulaResult::SetHybridValueString( double nVal, const OUString& rStr )
+{
+    ResetToDefaults();
+    if (mbToken && mpToken)
+        mpToken->DecRef();
+    mpToken = new ScHybridValueCellToken( nVal, rStr );
     mpToken->IncRef();
     mbToken = true;
 }
